--- a/templates/confirm_payments.html
+++ b/templates/confirm_payments.html
@@ -36,6 +36,13 @@
 <div class="container mt-5">
     <h1>Confirm Payments</h1>
     <br>
+    <!-- If there's nothing to show -->
+    <div class="list-group-item empty-message container-fluid p-5" id="empty-stall-message">
+        <div class="container text-center p-5 m-5">
+            <h4 class="empty-message-text w-100">There are no orders for confirmation</h4>
+        </div>
+    </div>
+    <!-- Else -->
     <table class="table table-hover">
         <thead>
         <tr>
@@ -47,7 +54,7 @@
         </thead>
         <tbody>
         {% for request in pending_requests %}
-            <tr class="clickable-row" data-toggle="modal" data-target="#details">
+            <tr class="clickable-row" data-toggle="modal" data-target="#order-details-{{ order.id }}">
                 <td>{{ request.id }}</td>
                 <td>{{ request.customer_payment_date }}</td>
                 <td>P {{ request.total_price }}</td>
@@ -57,43 +64,127 @@
 
         </tbody>
     </table>
+    <!-- Endif -->
 </div>
 
 <!-- Payment Details Modal -->
-<div class="modal fade" id="details">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Payment Details</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div>
-                <div class="modal-body d-flex">
-                    <div class="mr-5">
-                        <h6>Order Details</h6>
-                        <p class="text-muted m-0">Order #</p>
-                        <p class="text-muted m-0">[Order Date]</p>
-                        <p class="text-muted m-0">[Amount Paid]</p>
-                    </div>
-                    <div class="ml-5">
-                        <h6>Customer Details</h6>
-                        <p class="text-muted m-0">[Customer Name]</p>
-                        <p class="text-muted m-0">[Customer Number</p>
-                        <p class="text-muted m-0">[Date of Payment]</p>
-                    </div>
+{% for order in selected_type %}
+    <div class="modal fade" id="order-details-{{ order.id }}">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Order Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button id="create-stall-button" class="btn btn-outline-danger">Delete</button>
-                    <button id="create-stall-button" class="btn btn-primary">Approve</button>
-                </div>
+                <div>
+                    <div class="p-3">
+                        <div class="modal-body">
+                            <div class="d-flex mb-4">
+                                <!-- Customer Details -->
+                                <div class="mr-5">
+                                    <h5 class="mb-3">Customer Details</h5>
+                                    <table class="table">
+                                        <tbody>
+                                        <tr>
+                                            <th>Name</th>
+                                            <td>{{ order.customer.full_name }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Contact No.</th>
+                                            <td>{{ order.customer.phone_number }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Date of Payment</th>
+                                            <td>[Template]</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
 
+                                <!-- Address -->
+                                <div>
+                                    <h5 class="mb-3">Customer Address</h5>
+                                    <table class="table">
+                                        <tbody>
+                                        <tr>
+                                            <th>City</th>
+                                            <td>{{ order.customer.city }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Address</th>
+                                            <td>{{ order.customer.address }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Postal Code</th>
+                                            <td>{{ order.customer.postal_code }}</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="d-flex">
+                                <!-- Order Details -->
+                                <div class="mr-5">
+                                    <h5 class="mb-3">Order Details</h5>
+                                    <table class="table" style="width: 300px;">
+                                        <tbody>
+                                        <tr>
+                                            <th>Order No.</th>
+                                            <td>{{ order.id }}</td>
+                                        </tr>
+                                        <tr>
+
+                                            <th>Order Date</th>
+                                            <td>{{ order.date_ordered }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Total</th>
+                                            <td>₱{{ order.total_price }}</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div>
+                                    <h5 class="mb-3">Image Link</h5>
+                                    <a>Link</a>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="container-fluid p-3">
+                            <h4 class="mb-3">Order Products</h4>
+                            <table class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Product Name</th>
+                                    <th>Quantity</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for line_item in order.orderlineitems_set.all %}
+                                    <tr>
+                                        <td>{{ line_item.product.name }}</td>
+                                        <td>{{ line_item.quantity }}</td>
+                                    </tr>
+                                {% endfor %}
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancel Order</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Approve</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+{% endfor %}
 
 </body>
 </html>
